...
const INITIAL_PROGRESS_INTERVAL = 1;
const INITIAL_BREAKPOINTS = [10, 20, 40, 55, 60, 130, 250, 490, 970, 1930];
const UPDATED_BREAKPOINTS = [5, 15, 30, 45, 60, 120, 240, 480, 960, 1920];

type PlaygroundScreenNavigationProp = StackNavigationProp<
  RootStackParamList,
  'PlaygroundExample'
>;

type ResizeModeOption = {
  name: string;
  value: ResizeMode;
};
...
          />
        ) : null}

        <IVSPlayer
          key={resizeMode?.value}
          ref={mediaPlayerRef}
          paused={paused}
          resizeMode={resizeMode?.value}
          muted={muted}
          autoplay={autoplay}
          liveLowLatency={liveLowLatency}
          rebufferToLive={rebufferToLive}
          streamUrl={url}
          logLevel={logLevel}
          initialBufferDuration={initialBufferDuration}
          playbackRate={playbackRate}
          progressInterval={progressInterval}
          volume={volume}
          autoQualityMode={autoQualityMode}
          quality={{
            target: manualQuality,
          }}
          autoMaxQuality={autoMaxQuality}
          breakpoints={breakpoints}
...
            log(`quality changed: ${newQuality?.name}`);
          }}
          onPipChange={(isActive) => {
            log(`picture in picture changed - isActive: ${isActive}`);
          }}
          onRebuffering={() => setBuffering(true)}
          onLoadStart={() => log(`load started`)}
          onLoad={(loadedDuration) =>
            log(
              `loaded duration changed: ${parseSecondsToString(
                loadedDuration || 0
              )}`
            )
...
          onTimePoint={(timePoint) => console.log('time point', timePoint)}
          showErrorMessage={showErrorMessage}
        >
          {orientation === Position.PORTRAIT ? (
            <>
              <Button
                testID="settingsIcon"
                style={styles.icon}
                icon="cog"
                color="gray"
                onPress={() => setIsModalOpened(true)}
              >
                Settings
...
                        {parseSecondsToString(position ? position : 0)}
                      </Text>
                    ) : (
                      <Text>{''}</Text>
                    )}
                    {duration ? (
                      <Text style={styles.positionText} testID="durationLabel">
                        {parseSecondsToString(duration)}
                      </Text>
                    ) : null}
                  </View>
                  {duration && !Number.isNaN(duration) ? (
                    <Slider
...
        {isModalOpened && (
          <View style={styles.modalContentContainer}>
            <View style={styles.modalContent}>
              <View style={styles.modalHeader}>
                <Title>Settings</Title>
                <Button
                  testID="closeIcon"
                  icon="close"
                  color="gray"
                  onPress={() => setIsModalOpened(false)}
                >
                  Close
                </Button>
...
                  <SettingsInputItem
                    label="url"
                    onChangeText={setUrl}
                    value={url}
                    multiline
                  />
                  <SettingsItem label="Quality" testID="qualitiesPicker">
                    <OptionPicker
                      option={manualQuality}
                      options={qualities}
                      autoOption
                      setOption={(quality) => {
                        setAutoQualityMode(!quality);
                        setManualQuality(quality);
                      }}
                    />
                  </SettingsItem>
                  <SettingsItem label="Resize mode" testID="resizeModePicker">
                    <OptionPicker
                      option={resizeMode}
                      options={RESIZE_MODES}
                      setOption={(mode) => {
                        setResizeMode(mode);
                        log(`Resize mode changed: ${resizeMode?.value}`);
...
                    testID="rebufferToLive"
                  />
                  <SettingsSwitchItem
                    label="Play in background"
                    value={playInBackground}
                    onValueChange={setPlayInBackground}
                    testID="pauseInBackground"
                  />
                  <SettingsSwitchItem
                    label="Show error message"
                    value={showErrorMessage}
                    onValueChange={setShowErrorMessage}
                    testID="showErrorMessage"
                  />
                  <SettingsItem label="Log Level" testID="logLevelPicker">
                    <LogLevelPicker
                      logLevel={logLevel}
                      setLogLevel={setLogLevel}
                    />
                  </SettingsItem>
                  <SettingsSwitchItem
...
                      if (value) {
                        setManualQuality(null);
                      }
                      setAutoQualityMode(value);
                    }}
                    value={autoQualityMode}
                    testID="autoQuality"
                  />
                  <SettingsItem
                    label="Auto Max Quality"
                    testID="autoMaxQualityPicker"
                  >
                    <OptionPicker
                      option={autoMaxQuality}
                      options={qualities}
                      autoOption
                      setOption={setAutoMaxQuality}
...
